--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "externals/flightgear"]
 	path = externals/flightgear
 	url = git@gitorious.org:~ffs/fg/ffss-flightgear2.git
+[submodule "externals/fgms-1"]
+	path = externals/fgms-1
+	url = git@gitorious.org:~ffs/fgms/ffs-docs-fgms-1-x.git
