--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@gitorious.org:~ffs/fg/ffss-flightgear2.git
 [submodule "externals/fgms-1"]
 	path = externals/fgms-1
-	url = git@gitorious.org:~ffs/fgms/ffs-docs-fgms-1-x.git
+	url = https://git.gitorious.org/~ffs/fgms/ffs-docs-fgms-1-x.git
