--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "externals/terragear"]
 	path = externals/terragear
-	url = git://gitorious.org/fg/terragear.git
+	url = https://git.gitorious.org/~ffs/fg/ffss-terragear.git
 [submodule "externals/simgear"]
 	path = externals/simgear
-	url = git@gitorious.org:~ffs/fg/ffss-simgear.git
+	url = https://git.gitorious.org/~ffs/fg/ffss-simgear.git
 [submodule "externals/flightgear"]
 	path = externals/flightgear
-	url = git@gitorious.org:~ffs/fg/ffss-flightgear2.git
+	url = https://git.gitorious.org/~ffs/fg/ffss-flightgear2.git
 [submodule "externals/fgms-1"]
 	path = externals/fgms-1
-	url = git://gitorious.org/~ffs/fgms/ffs-docs-fgms-1-x.git
+	url = https://git.gitorious.org/~ffs/fgms/ffs-docs-fgms-1-x.git
