--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "externals/terragear"]
 	path = externals/terragear
 	url = https://git.gitorious.org/~ffs/fg/ffss-terragear.git
+[submodule "externals/flightgear"]
+	path = externals/flightgear
+	url = git://gitorious.org/~ffs/fg/ffss-flightgear2.git
