--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,19 @@ fgms-1:
     official: 0
     doxy_file: docx/doxy.conf 
 
+plib:
+    title: Steves's Portable Game Library
+    version: 
+        number: 1.8.5
+    repo: svn
+    svn: https://plib.svn.sourceforge.net/svnroot/plib/trunk plib externals/plib
+    official: 1
+    #doxy_preset_file: doxy-plib.conf
+    copy:
+      - etc/DoxyMain-plib.cpp
+
+
+
 fg-docs:
     title: FlightGear Documentation Project
     version: 
@@ -25,6 +38,5 @@ fg-docs:
     repo: git
     git: https://git.gitorious.org/~ffs/flightgear-docs-project
     official: 1
-    doxy_args:
-        INPUT: docx/ py_update.py 
-        
+    copy:
+      - etc/DoxyMain-fg-docs.cpp
