--- a/etc/projects.config.yaml
+++ b/etc/projects.config.yaml
@@ -31,15 +31,15 @@ terragear:
     version: 
         number: git
     repo: git
-    checkout: git://gitorious.org/~ffs/fg/ffss-terragear.git
-    upstream: git://gitorious.org/fg/terragear.git
+    checkout: git://gitorious.org/fg/terragear.git
     official: 0
     tags: simgear
-    doxy_file: docx/doxy.conf
+    doxy_file: doxygen-src.conf
     doxy_args:
         HTML_COLORSTYLE_HUE: 120
         HTML_COLORSTYLE_SAT: 80
         HTML_COLORSTYLE_GAMMA: 220
+        LAYOUT_FILE: 
 
 osg:
     abbrev: OSG
