--- a/etc/projects.config.yaml
+++ b/etc/projects.config.yaml
@@ -21,9 +21,9 @@ osg:
     runlevel: 15
     color: "#5F89B3"
     version: 
-        number: 3.1.3
+        number: 3.2.1
     repo: svn
-    checkout: http://www.openscenegraph.org/svn/osg/OpenSceneGraph/tags/OpenSceneGraph-3.1.1
+    checkout: http://www.openscenegraph.org/svn/osg/OpenSceneGraph/tags/OpenSceneGraph-3.2.1-rc2
     official: 1
     copy:
       - etc/DoxyMain-osg.cpp
