--- a/etc/doxy-fgdata.conf
+++ b/etc/doxy-fgdata.conf
@@ -595,7 +595,7 @@ WARN_LOGFILE           =
 # documented source files. You may enter file names like "myfile.cpp" or
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
-INPUT                  =  Shaders/ Nasal/ DoxyMain-fgdata.cpp
+INPUT                  =  sShaders_/ Nasal/ DoxyMain-fgdata.cpp shaders.dox
 #INPUT                  =  Shaders/ 
 
 # This tag can be used to specify the character encoding of the source files
@@ -614,7 +614,7 @@ INPUT_ENCODING         = UTF-8
 # *.hxx *.hpp *.h++ *.idl *.odl *.cs *.php *.php3 *.inc *.m *.mm *.dox *.py
 # *.f90 *.f *.for *.vhd *.vhdl
 # *.vert *.nas
-FILE_PATTERNS          = c*.frag c*.vert c*.nas
+FILE_PATTERNS          = *.frag *.vert *.nas
 
 
 # The RECURSIVE tag can be used to turn specify whether or not subdirectories
@@ -1073,7 +1073,7 @@ GENERATE_TREEVIEW      = YES
 # used to set the initial width (in pixels) of the frame in which the tree
 # is shown.
 
-TREEVIEW_WIDTH         = 250
+TREEVIEW_WIDTH         = 400
 
 # When the EXT_LINKS_IN_WINDOW option is set to YES doxygen will open
 # links to external symbols imported via tag files in a separate window.
