--- a/etc/doxy-fgdata.conf
+++ b/etc/doxy-fgdata.conf
@@ -595,7 +595,7 @@ WARN_LOGFILE           =
 # documented source files. You may enter file names like "myfile.cpp" or
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
-INPUT                  =  sShaders_/ Nasal/ DoxyMain-fgdata.cpp shaders.dox
+INPUT                  =  sShaders_/ Nasal_/ DoxyMain-fgdata.cpp shaders.dox
 #INPUT                  =  Shaders/ 
 
 # This tag can be used to specify the character encoding of the source files
