--- a/etc/doxy-fgdata.conf
+++ b/etc/doxy-fgdata.conf
@@ -354,7 +354,7 @@ HIDE_UNDOC_MEMBERS     = NO
 # If set to NO (the default) these classes will be included in the various
 # overviews. This option has no effect if EXTRACT_ALL is enabled.
 
-HIDE_UNDOC_CLASSES     = YES
+HIDE_UNDOC_CLASSES     = NO
 
 # If the HIDE_FRIEND_COMPOUNDS tag is set to YES, Doxygen will hide all
 # friend (class|struct|union) declarations.
@@ -595,7 +595,7 @@ WARN_LOGFILE           =
 # documented source files. You may enter file names like "myfile.cpp" or
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
-INPUT                  =  sShaders_/ Nasal_/ DoxyMain-fgdata.cpp shaders.dox
+INPUT                  =  Shaders_/ Nasal_/ DoxyMain-fgdata.cpp shaders.dox
 #INPUT                  =  Shaders/ 
 
 # This tag can be used to specify the character encoding of the source files
